cmake_minimum_required(VERSION 3.14)
project(dynamic_programming)
 
# Subdirectories for each category
add_subdirectory(01_matrix01)
add_subdirectory(02_climb_stairs)
add_subdirectory(03_pascal_triangle)
add_subdirectory(04_pascal_triangleII)
add_subdirectory(05_climb_stairs_min_cost)
add_subdirectory(06_fibonacci)
